cc: Remove fields unused now that strict property checking is always on.

TBR=enne@chromium.org
BUG=599755
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1854553002

Cr-Commit-Position: refs/heads/master@{#384476}

Former-commit-id: 3a513c0f094c9e81a7b88d5b6681804937dfb258